# uav-modkit

./: .dockerignore  .gitignore  LICENSE  README.md  build.bat  build.sh  build_wsl.bat  camera_start.bat  docker-compose.yml  docker_build.bat  docker_build.sh  docker_run.bat  docker_run.sh  docker_run_imu.bat  docker_run_imu.sh  imu_auto.launch.py  imu_start.bat  install_and_build.sh  lidar_auto.launch.py  package.xml  power_auto.launch.py  requirements.txt  run_tests.bat  setup.cfg  setup.py  setup_wsl.bat
.colcon/: defaults.json
camera/: package.xml  setup.cfg  setup.py
camera/camera_sensor/: __init__.py  camera_detector.py  libcamera_node.py  payload_adapter.py
core/: core.py
deploy/: Deploy.py
docker/: Dockerfile  entrypoint.sh
imu/: imu_params.yaml  package.xml  setup.cfg  setup.py
imu/imu_sensor/: __init__.py  bosch_bno055.py  imu_detector.py  imu_if.py  payload_adapter.py
launch/: camera_auto.launch.py  imu_auto.launch.py  lidar_auto.launch.py  power_auto.launch.py
lidar/: detector.py  package.xml  payload_mgr.py  setup.cfg  setup.py  velodyne.py
lidar/resource/: lidar_sensor
monitor/: battery.py  sensor_health.py
power/: package.xml  setup.py
resource/: uav_modkit
test/: pytest.ini  requirements-test.txt  run_tests.sh  test_camera_detector.py  test_deploy_manager.py  test_imu_detector.py  test_integration.py  test_lidar_detector.py
