<?xml version="1.0"?>
<package format="3">
  <name>uav_modkit</name>
  <version>0.1.0</version>
  <description>
    Unified UAV sensor system including IMU, LiDAR, Power Management, 
    health monitoring, and deployment manager modules.
  </description>

  <maintainer email="matrix.space2@gmail.com">UAV Development Team</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Umbrella package dependencies (sub-packages) -->
  <exec_depend>imu_sensor</exec_depend>
  <exec_depend>lidar_sensor</exec_depend>
  <exec_depend>camera_sensor</exec_depend>
  <exec_depend>power_mgr</exec_depend>
  <exec_depend>sensor_health</exec_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Launch support -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
