[develop]
script_dir=$base/lib/UAV
[install]
install_scripts=$base/lib/UAV

[metadata]
name = UAV
version = 0.1.0
description = Unified UAV sensor system including IMU, LiDAR, health monitoring, deployment manager, and fusion modules.
license = Apache-2.0

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    sensor_msgs
    nav_msgs
    launch
    launch_ros

[options.entry_points]
console_scripts =
    # Deployment Manager
    deploy_mgr_node = deployment_mgr.deploy_mgr_node:main
    sensor_fusion_node = deployment_mgr.sensor_fusion_node:main

    # IMU
    imu_detector = imu_sensor.imu_detector:main
    imu_payload_adapter = imu_sensor.imu_payload_adapter:main
    bosch_bno055_imu = imu_sensor.bosch_bno055_imu:main

    # LiDAR
    lidar_detector = lidar_sensor.lidar_detector:main
    lidar_payload_adapter = lidar_sensor.lidar_payload_adapter:main
    velodyne_lidar = lidar_sensor.velodyne_lidar:main

    # Health Monitor
    sensor_health_monitor = sensor_health.sensor_health_monitor:main
