<?xml version="1.0"?>
<package format="3">
  <name>UAV</name>
  <version>0.1.0</version>
  <description>
    Unified UAV sensor system including IMU, LiDAR, health monitoring,
    deployment manager, and fusion modules.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies (umbrella package) -->
  <exec_depend>imu_sensor</exec_depend>
  <exec_depend>lidar_sensor</exec_depend>
  <exec_depend>sensor_health</exec_depend>
  <exec_depend>deployment_mgr</exec_depend>

  <!-- ROS 2 core dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Launch + parameter support -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- For shared config files -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
