<?xml version="1.0"?>
<package format="3">
  <name>imu_sensor</name>
  <version>0.1.0</version>
  <description>Unified ROS 2 IMU interface for multiple UAV sensor modules.</description>

  <maintainer email="matrix.space2@gmail.com">UAV Development Team</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Launch support -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
